# swatch

./: .editorconfig  .gitignore  .travis.yml  README.md  Rakefile  package.json  sample.envrc
c/: CMakeLists.txt  DEVELOPMENT.md  Doxyfile  Makefile  (+31 more)
cpp/: .gitignore  CMakeLists.txt  DEVELOPMENT.md  Doxyfile  README.md  dir_000002_000000.html  dir_000003_000000.html  dir_000004_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6d68ae7bdb9679f12b76748203a4e7b6.html  dir_6d68ae7bdb9679f12b76748203a4e7b6_dep.map  dir_6d68ae7bdb9679f12b76748203a4e7b6_dep.md5  dir_8a0776572ba2252f65a895457421e228.html  dir_8a0776572ba2252f65a895457421e228_dep.map  dir_8a0776572ba2252f65a895457421e228_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_dee94686a538750073e8ccc90433f66d.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaceswatch.html  swatch_09_09_8cpp.html  swatch_09_09_8cpp__incl.map  swatch_09_09_8cpp__incl.md5  swatch_09_09_8hpp.html  swatch_09_09_8hpp__dep__incl.map  swatch_09_09_8hpp__dep__incl.md5  swatch_09_09_8hpp__incl.map  swatch_09_09_8hpp__incl.md5  swatch_09_09_8hpp_source.html
cpp/include/swatch/: swatch.hpp
cpp/include/swatch++/: swatch++.hpp
cpp/lib/: swatch.cpp  swatch.hh
cpp/search/: all_0.js  all_2.js  files_1.js  functions_0.js  functions_2.js  namespaces_0.js  searchdata.js
cpp/src/: swatch++.cpp  swatch.cpp
cpp/src/cmd/swatch/: main.cpp
cpp/src/cmd/swatch++/: main.cpp
(+13 files in other folders)
